--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 #main{
 	width:100%;
 	height: 100vh;
-	background-image: url("file:///C:/Users/Admin/Desktop/akshay/IMG_20200318_202650.jpg");
+	background-image: url("http://i.xp.io/AafcPVJ.jpg");
 	background-size: cover;
 }
 nav{
