--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 #main{
 	width:100%;
-	height: 100%;
+	height: 100vh;
 	background-image: url("http://i.xp.io/AafcPVJ.jpg");
 	background-size: cover;
 }
