--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1 {
 	padding-top: 50px;
 	margin-bottom: 0; 
 }
-p{
+div p{
 	color: #fff;
 	text-align: center;
 	font-family: sans-serif;
@@ -39,7 +39,7 @@ p{
 	left: 50%;
 	transform: translate(-53%, -50%);
 }
-li{
+div ul li{
 	list-style: none;
 	margin: 10px 30px;
 	display: inline-block;
@@ -50,7 +50,7 @@ li{
 	border-radius: 50%;
 	transition: .5s;
 }
-li:hover{
+div ul li:hover{
 	color: #292929;
 	border: 1px solid #292929;
 	transition: .5s;
