--- a/css/style.css
+++ b/css/style.css
@@ -55,5 +55,34 @@ div ul li:hover{
 	border: 1px solid #292929;
 	transition: .5s;
 }
+#main{
+	width:100%;
+	height: 200vh;
+	background-size: cover;
+}
+nav{
+	width: 100%;
+	height: 100px;
+	background-color: #0008;
+	line-height: 80px;
+}
+.navi{
+	float: right;
+	margin-right: 30px;
+}
+nav li{
+	list-style-type: none;
+	display: inline-block;
+	transition: 0.8s all;
+
+}	
+nav li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 30px;
+}
+nav li:hover{
+	background-color: #f39d1a;
+}
 
 
