--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,34 @@
-body{
-	font-family: sans-serif;
-	background: #282828;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-    background-size: 400% 400%;
-    animation: Gradient 15s ease infinite;
-}
-@-webkit-keyframes Gradient{
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-h1 {
-	font-weight: lighter;
-	font-size: 80px;
-	color: #fff;
-	text-align:center;
-	padding-top: 50px;
-	margin-bottom: 0; 
-}
-div p{
-	color: #fff;
-	text-align: center;
-	font-family: sans-serif;
-	font-weight: lighter;
-	font-size: 20px;
-	margin-top:0;
-
-}
-.media{
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	transform: translate(-53%, -50%);
-}
-div ul li{
-	list-style: none;
-	margin: 10px 30px;
-	display: inline-block;
-	font-size: 20px;
-	padding: 20px 20px;
-	color: #fff;
-	border: 1px solid #fff;
-	border-radius: 50%;
-	transition: .5s;
-}
-div ul li:hover{
-	color: #292929;
-	border: 1px solid #292929;
-	transition: .5s;
+*{
+	margin="0";
+	padding="0";
 }
 #main{
 	width:100%;
-	height: 200vh;
+	height: 100vh;
+	background-image: url("C:\Users\Admin\Desktop\akshay\IMG_20200318_202650.jpg");
 	background-size: cover;
 }
 nav{
 	width: 100%;
-	height: 100px;
+	height: 80px;
 	background-color: #0008;
 	line-height: 80px;
 }
-.navi{
+nav ul{
 	float: right;
 	margin-right: 30px;
 }
-nav li{
+nav ul li{
 	list-style-type: none;
 	display: inline-block;
 	transition: 0.8s all;
 
 }	
-nav li a{
+nav ul li a{
 	text-decoration: none;
 	color: #fff;
 	padding: 30px;
 }
-nav li:hover{
+nav ul li:hover{
 	background-color: #f39d1a;
 }
-
-
