--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,24 @@
 	margin="0";
 	padding="0";
 }
+body{
+	font-family: sans-serif;
+	background: #282828;
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    animation: Gradient 15s ease infinite;
+}
+@-webkit-keyframes Gradient{
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
 #main{
 	width:100%;
 	height: 100vh;
