--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,42 @@ nav ul li a{
 nav ul li:hover{
 	background-color: #f39d1a;
 }
+h1 {
+	font-weight: lighter;
+	font-size: 80px;
+	color: #fff;
+	text-align:center;
+	padding-top: 50px;
+	margin-bottom: 0; 
+}
+div p{
+	color: #fff;
+	text-align: center;
+	font-family: sans-serif;
+	font-weight: lighter;
+	font-size: 20px;
+	margin-top:0;
+
+}
+.media{
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-53%, -50%);
+}
+div ul li{
+	list-style: none;
+	margin: 10px 30px;
+	display: inline-block;
+	font-size: 20px;
+	padding: 20px 20px;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 50%;
+	transition: .5s;
+}
+div ul li:hover{
+	color: #292929;
+	border: 1px solid #292929;
+	transition: .5s;
+}
