--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ div p{
 }
 div ul li{
 	list-style: none;
-	margin: 100px 80px;
+	margin: 10px 30px;
 	display: inline-block;
 	font-size: 20px;
 	padding: 20px 20px;
@@ -77,6 +77,7 @@ div ul li{
 	border: 1px solid #fff;
 	border-radius: 50%;
 	transition: .5s;
+	float: bottom;
 }
 div ul li:hover{
 	color: #292929;
