--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1 {
 	text-align:center;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	margin-bottom: 0; 
+	margin-bottom: 10px; 
 }
 div p{
 	color: #fff;
