--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,18 @@ div p{
 	font-family: sans-serif;
 	font-weight: lighter;
 	font-size: 20px;
-	margin-top:50px;
+	margin-top:0;
 
 }
 .media{
 	position: absolute;
-	top: 50%;
-	left: 60%;
+	top: 40%;
+	left: 50%;
 	transform: translate(-53%, -50%);
 }
 div ul li{
 	list-style: none;
-	margin: 50px 30px;
+	margin: 10px 30px;
 	display: inline-block;
 	font-size: 20px;
 	padding: 20px 20px;
