--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-*{
-	margin="0";
-	padding="0";
-}
 body{
 	font-family: sans-serif;
 	background: #282828;
@@ -20,36 +16,13 @@ body{
 		background-position: 0% 50%
 	}
 }
-nav{
-	width: 100%;
-	height: 100px;
-	background-color: #0008;
-	line-height: 80px;
-}
-nav ul{
-	float: right;
-	margin-right: 30px;
-}
-nav ul li{
-	list-style-type: none;
-	display: inline-block;
-	transition: 0.8s all;
-
-}	
-nav ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 30px;
-}
-nav ul li:hover{
-	background-color: #f39d1a;
-}
 h1 {
 	font-weight: lighter;
 	font-size: 80px;
 	color: #fff;
 	text-align:center;
 	padding-top: 50px;
+	padding-bottom: 50px;
 	margin-bottom: 0; 
 }
 div p{
@@ -58,14 +31,15 @@ div p{
 	font-family: sans-serif;
 	font-weight: lighter;
 	font-size: 20px;
-	margin-top:0px;
+	margin-top:50px;
+	margin-bottom: 0;
 
 }
 .media{
 	position: absolute;
-	top: 60%;
-	left: 70%;
-	transform: translate(-63%, -60%);
+	top: 40%;
+	left: 50%;
+	transform: translate(-53%, -50%);
 }
 div ul li{
 	list-style: none;
@@ -77,10 +51,12 @@ div ul li{
 	border: 1px solid #fff;
 	border-radius: 50%;
 	transition: .5s;
-	float: bottom;
+	margin-top: 50px;
 }
 div ul li:hover{
 	color: #292929;
 	border: 1px solid #292929;
 	transition: .5s;
 }
+
+
