--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ h1 {
 	color: #fff;
 	text-align:center;
 	padding-top: 50px;
+	padding-bottom: 50px;
 	margin-bottom: 0; 
 }
 div p{
@@ -30,7 +31,8 @@ div p{
 	font-family: sans-serif;
 	font-weight: lighter;
 	font-size: 20px;
-	margin-top:0;
+	margin-top:50px;
+	margin-bottom: 0;
 
 }
 .media{
@@ -49,6 +51,7 @@ div ul li{
 	border: 1px solid #fff;
 	border-radius: 50%;
 	transition: .5s;
+	margin-top: 50px;
 }
 div ul li:hover{
 	color: #292929;
