--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ div p{
 }
 div ul li{
 	list-style: none;
-	margin: 10px 30px;
 	display: inline-block;
 	font-size: 20px;
 	padding: 20px 20px;
@@ -51,6 +50,7 @@ div ul li{
 	border-radius: 50%;
 	transition: .5s;
 	margin-top: 50px;
+	margin-right: 30px;
 }
 div ul li:hover{
 	color: #292929;
