--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ div p{
 }
 div ul li{
 	list-style: none;
+	margin: 10px 30px;
 	display: inline-block;
 	font-size: 20px;
 	padding: 20px 20px;
@@ -50,12 +51,17 @@ div ul li{
 	border-radius: 50%;
 	transition: .5s;
 	margin-top: 50px;
-	margin-right: 30px;
 }
 div ul li:hover{
 	color: #292929;
 	border: 1px solid #292929;
 	transition: .5s;
+}
+nav{
+	width: 100%;
+	height: 100px;
+	background-color: #0008;
+	line-height: 80px;
 }
 
 
