--- a/css/style.css
+++ b/css/style.css
@@ -73,4 +73,12 @@ nav ul li{
 	transition: 0.8s all;
 
 }
+nav ul li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 30px;
+}
+nav ul li:hover{
+	background-color: #f39d1a;
+}
 
