--- a/css/style.css
+++ b/css/style.css
@@ -1,185 +1,83 @@
-*{
-	box-sizing: border-box;
-}
-
 body{
-	font-family: 'Lato', sans-serif;
-	margin: 0;
-	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../bg.jpg);
-	background-size: cover;
-	background-position: top center;
-	background-repeat: no-repeat;
-	overflow: hidden;
-	background-attachment: fixed;
+	font-family: sans-serif;
+	background: #282828;
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+    background-size: 400% 400%;
+    animation: Gradient 15s ease infinite;
 }
-
-ul, nav{
-	padding: 0;
-	list-style-type: none;
+@-webkit-keyframes Gradient{
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
-
-a{
+h1 {
+	font-weight: lighter;
+	font-size: 80px;
 	color: #fff;
-	text-decoration: none;
-	cursor: pointer;
-	opacity: 0.9;
+	text-align:center;
+	padding-top: 10px;
+	margin-bottom: 0; 
 }
-a:hover{
-	opacity: 1;
-}
-h1{
-	font-size: 3rem;
-	font-weight: 700;
+div p{
 	color: #fff;
-	margin: 0 0 1.5rem;
+	text-align: center;
+	font-family: sans-serif;
+	font-weight: lighter;
+	font-size: 20px;
+	margin-top:50px;
+	margin-bottom: 0;
 
 }
-
-header{
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	color: #fff;
-	position: fixed;
-	padding: 10px 100px 0;
-}
-
-header nav ul{
-	display: flex;
-}
-
-header nav li{
-	margin: 0 15px;
-
-}
-header nav li:first-child{
-	margin-left: 0;
-}
-header nav li:last-child{
-	margin-right: 0;
-}
-a.btn{
-	color: #fff;
-	padding: 10px;
-	border: 1px solid rgba(255,255,255,0.5);
-	transform: 0.4s all;
-
-}
-a.btn:hover{
-	background-color: #d73851;
-	border: 1px solid #d73851;
-	color: #fff;
-
-}
-.cover{
-	height: 100vh;
-	width: 100%;
-	padding: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-.flex_form input[type="submit"]{
-	background-color: #ef3f5a;
-	border: 1px solid #ef3f5a;
-	color: #fff;
-	padding: 0 30px;
-	cursor: pointer;
-	transition: 0.4s all;
-
-}
-.flex_form input[type="submit"]:hover{
-	background-color: #d73851;
-	border: 1px solid #d73851;
-}
-
-.flex_form{
-	display: flex;
-	z-index: 10;
-	position: relative;
-	width: 500px;
-	box-shadow: 4px 8px 16px rgba(0,0,0,0.5);
-}
-.flex_form > *{
-	border: 0;
-	padding: 0 0 0 10px;
-	background: #fff;
-	line-height: 50px;
-	font-size: 1rem;
-	border-radius: 0;
-	outline: 0;
-}
-input[type="search"]{
-	flex-basis: 500px;
-
-}
-
-.madeby{
+.media{
 	position: absolute;
-	bottom: 0;
-	right: 0;
-	padding: 25px 100px;
-	color: #fff; 
+	top: 65%;
+	left: 50%;
+	transform: translate(-53%, -50%);
+}
+div ul li{
+	list-style: none;
+	display: inline-block;
+	font-size: 20px;
+	padding: 20px 20px;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 50%;
+	transition: .5s;
+	margin-top: 50px;
+	margin-right: 30px; 
+}
+div ul li:hover{
+	color: #292929;
+	border: 1px solid #292929;
+	transition: .5s;
+}
+nav{
+	width: 100%;
+	height: 100px;
+	background-color: #0008;
+	line-height: 80px;
+}
+nav ul{
+	float: right;
+	margin-right: 30px;
+}
+nav ul li{
+	list-style-type: none;
+	display: inline-block;
+	transition: 0.8s all;
 
 }
-@media all and(max-width: 800px){
-	body{
-		font-size: 0.9rem;
-
-	}
-
-	.flex_form{
-		width: 100%;
-
-	}
-	input[type="search"]{
-	flex-basis: 100%;
-
+nav ul li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 30px;
 }
-    .flex_form > *{
-    	font-size: 0.9rem;
-    }
-
-    header{
-    	flex-direction: column;
-    	padding: 10px !important;
-    }
-
-    header h2{
-    	margin-bottom: 15px;
-    }
-
-    h1{
-    	font-size: 2rem;
-    }
-
-    .cover{
-    	padding: 20px;
-    }
-
-    .madeby{
-    	padding: 30px 20px;
-    }
-
-}
-
-
-
-@media all and(max-width: 300px){
-	header nav li{
-		margin: 0px 10px;
-	}
-
-	.flex_form{
-		display: flex;
-		flex-direction: column;
-
-	}
-
-
-	input[type="search"]{
-		flex-basis: 0;
-	}
+nav ul li:hover{
+	background-color: #f39d1a;
 }
