--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body{
 	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
     background-size: 400% 400%;
     animation: Gradient 15s ease infinite;
+    height: 100%;
+    width: 100%;
 }
 @-webkit-keyframes Gradient{
 	0% {
@@ -16,68 +18,237 @@ body{
 		background-position: 0% 50%
 	}
 }
-h1 {
-	font-weight: lighter;
-	font-size: 80px;
-	color: #fff;
-	text-align:center;
-	padding-top: 10px;
-	margin-bottom: 0; 
-}
-div p{
-	color: #fff;
-	text-align: center;
-	font-family: sans-serif;
-	font-weight: lighter;
-	font-size: 20px;
-	margin-top:50px;
-	margin-bottom: 0;
 
+
+.navbar{
+	background-color: #0009;
+	padding: 1% 0%;
+	font-size: 1.2em;
 }
+
+.navbar-brand{
+	min-height: 55px;
+	padding: 0 15px 5px;
+}
+
+.navbar-default .navbar-nav li a {
+	color: #D5D5D5;
+}
+
+.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:active{
+	color: #fff;
+}
+
+#section-1 {
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+	background-image: url("https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html");
+	background-size: cover;
+} 
+
+#section-1 h1{
+	font-size: 500;
+	font-weight: 700;
+}
+
+.padding {
+	padding: 80px 0px;
+}
+
+.padding img {
+	width: 100%;
+}
+
+footer {
+	width: 100%;
+	background-color: #23415C;
+	padding: 5% 5% 10% 5%;
+	color: #fff;
+}
+
+
 .media{
 	position: absolute;
-	top: 65%;
-	left: 50%;
-	transform: translate(-53%, -50%);
+	top: 90%;
+	left: 10%;
 }
-div ul li{
+.media div ul li{
 	list-style: none;
 	display: inline-block;
-	font-size: 20px;
-	padding: 20px 20px;
+	font-size: 25px;
+	padding: 15px;
 	color: #fff;
 	border: 1px solid #fff;
 	border-radius: 50%;
-	transition: .5s;
-	margin-top: 50px;
-	margin-right: 30px; 
+	transition: .5s; 
 }
-div ul li:hover{
+.media div ul li:hover{
 	color: #292929;
 	border: 1px solid #292929;
 	transition: .5s;
 }
-nav{
-	width: 100%;
-	height: 100px;
-	background-color: #0008;
-	line-height: 80px;
-}
-nav ul{
-	float: right;
-	margin-right: 30px;
-}
-nav ul li{
-	list-style-type: none;
-	display: inline-block;
-	transition: 0.8s all;
 
+#section-2{
+	background-image: url("https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html");
+	background-size: cover;
 }
-nav ul li a{
-	text-decoration: none;
-	color: #fff;
-	padding: 30px;
-}
-nav ul li:hover{
-	background-color: #f39d1a;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
