--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,6 @@
 body{
-	font-family: sans-serif;
-	background: #282828;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-    background-size: 400% 400%;
-    animation: Gradient 15s ease infinite;
     height: 100%;
     width: 100%;
-}
-@-webkit-keyframes Gradient{
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
 }
 
 
@@ -49,7 +33,7 @@ body{
 } 
 
 #section-1 h1{
-	font-size: 500;
+	font-size: 500%;
 	font-weight: 700;
 }
 
