--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 body{
     height: 100%;
     width: 100%;
-    box-sizing: border-box;
 }
-
 
 .navbar{
 	background-color: #0009;
@@ -16,12 +14,12 @@ body{
 	padding: 0 5px;
 }
 
-.navbar-default, .navbar-nav li a {
+.navbar-default .navbar-nav li a {
 	color: #D5D5D5;
 	float: right;
 }
 
-.navbar-default, .navbar-nav li a:hover, .navbar-default .navbar-nav li a:active{
+.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:active{
 	color: #fff;
 }
 
@@ -36,12 +34,16 @@ body{
 #section-1 h1{
 	font-size: 500%;
 	font-weight: 700;
+	margin-bottom: 0px;
 }
 
 .padding {
-	padding: 80px 0px;
+	padding: 10px 0px 0px 0px;
 }
-
+.padding p {
+	margin-top: 20px;
+	margin-bottom: 0px;
+}
 
 footer {
 	width: 100%;
@@ -65,6 +67,8 @@ footer {
 	border: 1px solid #fff;
 	border-radius: 50%;
 	transition: .5s; 
+	margin-top: 20px;
+	margin-bottom: 0px;
 }
 .media div ul li:hover{
 	color: #292929;
