--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ footer {
 	list-style: none;
 	display: inline-block;
 	font-size: 25px;
-	padding: 15px;
+	padding: 15px 0px 0px 0px;
 	color: #fff;
 	border: 1px solid #fff;
 	border-radius: 50%;
