--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ body{
 } 
 
 #section-1 h1{
+	margin-top: 50px;
+	padding-top: 20px;
 	font-size: 500%;
 	font-weight: 700;
 	margin-bottom: 0px;
@@ -48,7 +50,7 @@ body{
 footer {
 	width: 100%;
 	background-color: #23415C;
-	padding: 5% 5% 10% 5%;
+	padding: 1% 1% 2% 1%;
 	color: #fff;
 }
 
