--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body{
 }
 
 .navbar{
+	height: 100px;
+	line-height: 80px;
 	background-color: #0009;
 	padding: 1% 0%;
 	font-size: 1.2em;
@@ -34,7 +36,7 @@ body{
 #section-1 h1{
 	margin-top: 50px;
 	padding-top: 20px;
-	font-size: 500%;
+	font-size: 100%;
 	font-weight: 700;
 	margin-bottom: 0px;
 }
