--- a/css/style.css
+++ b/css/style.css
@@ -1,244 +1,23 @@
 body{
-    height: 100%;
-    width: 100%;
+	width: "100%";
+	height: "100%";
 }
 
 .navbar{
-	height: 100px;
-	line-height: 80px;
-	background-color: #0009;
+	background-color: #23415c;
 	padding: 1% 0%;
 	font-size: 1.2em;
 }
 
 .navbar-brand{
 	min-height: 55px;
-	padding: 0 5px;
+	padding: 0px 15px 5px;
 }
-
-.navbar-default .navbar-nav li a {
+.navbar-default, .navbar-nav li a{
 	color: #D5D5D5;
-	float: right;
 }
 
-.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a:active{
+.navbar-default, .navbar-nav li a:hover, .navbar-default, .navbar-nav li a:active{
 	color: #fff;
+
 }
-
-#section-1 {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
-	background-image: url("https://pngtree.com/freebackground/black-minimalist-atmospheric-wooden-background_965794.html");
-	background-size: cover;
-} 
-
-#section-1 h1{
-	margin-top: 50px;
-	padding-top: 20px;
-	font-size: 100%;
-	font-weight: 700;
-	margin-bottom: 0px;
-}
-
-.padding {
-	padding: 10px 0px 0px 0px;
-}
-.padding p {
-	margin-top: 20px;
-	margin-bottom: 0px;
-}
-
-footer {
-	width: 100%;
-	background-color: #23415C;
-	padding: 1% 1% 2% 1%;
-	color: #fff;
-}
-
-
-.media{
-	position: absolute;
-	top: 90%;
-	left: 10%;
-}
-.media div ul li{
-	list-style: none;
-	display: inline-block;
-	font-size: 25px;
-	padding: 15px 0px 0px 0px;
-	color: #fff;
-	border: 1px solid #fff;
-	border-radius: 50%;
-	transition: .5s; 
-	margin-top: 20px;
-	margin-bottom: 0px;
-}
-.media div ul li:hover{
-	color: #292929;
-	border: 1px solid #292929;
-	transition: .5s;
-}
-
-#section-2{
-	background-size: cover;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
