--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,376 @@
-body{
-	width: "100%";
-	height: "100%";
+body {
+	font-size: 16px;
+	color: #fff;
+	background-color: #61122f;
+	font-family: sans-serif;
+}
+#header-nav {
+	background-color: #f6b319;
+	border-radius: 0;
+	border: 0; 
+}
+#logo-img {
+	background: url("http://i.xp.io/Bhq8VAP.jpg");
+	width: 150px;
+	height: 150px;
+	margin: 10px 15px 10px 0;
 }
 
-.navbar{
-	background-color: #23415c;
-	padding: 1% 0%;
+.navbar-brand { 
+	padding-top: 25px;
+}
+
+.navbar-brand h1 {
+	color: #557c3e;
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-top: 0;
+	margin-bottom: 0;
+	text-shadow: 1px 1px 1px #222;
+	line-height: .75;
+}
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+	text-decoration: none;
+}
+
+.navbar-brand p {
+    color: #000;
+    font-size: .7em;
+    margin-top: 15px;
+}
+
+.navbar-brand p span {
+	vertical-align: middle;
+}
+
+#nav-list{
+	margin-top: 10px;
+}
+
+#nav-list a {
+    color: #951c49;
+    text-align: center;
+}
+
+#nav-list a:hover{
+	font-size: 1.8em;
+}
+
+#phone {
+	margin-top: 5px;
+}
+
+#phone a {
+	text-align: right;
+	padding-bottom: 0;
+}
+#phone div {
+	color: #557c3e;
+	text-align: right;
+	padding-right: 15px;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+	border: 1px solid #61122f;
+}
+
+.navbar-header button.navbar-toggle {
+	clear: both;
+	margin-top: -30px;
+}
+.container .jumbotron{
+    box-shadow: 0 0 50px #3F0C1F;
+	border: 2px solid #3F0C1F;
+}
+
+
+
+#Gallery-tile, #Films-tile, #Map-tile {
+	height: 250px;
+	width: 100%;
+	margin-bottom: 15px;
+	position: relative;
+	border-radius: 2px solid #3F0C1F;
+	overflow: hidden;
+}
+
+#Gallery-tile:hover, #Films-tile:hover, #Map-tile:hover {
+	box-shadow: 0px 1px 5px 1px #cccccc; 
+
+}
+
+#Gallery-tile {
+	background: url("https://149354549.v2.pressablecdn.com/wp-content/uploads/2018/03/5-1.jpg") no-repeat;
+    background-position: center;
+}
+
+#Films-tile {
+	background: url("https://portugalinews.eu/wp-content/uploads/2018/09/film.jpg") no-repeat;
+    background-position: center;
+}
+
+
+
+#Gallery-tile span, #Films-tile span, #Map-tile span {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 50px;
+	padding-top: 15px;
+	text-align: center;
+	text-transform: uppercase;
+	background-color: #000;
+	color: #fff;
+	opacity: .8;
+
+
+}
+
+.panel-footer {
+	margin-top: 30px;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	background-color: #222;
+	border-top: 0;
+	text-align: center;
+
+}
+
+.panel-footer div.row{
+	margin-bottom: 35px;
+}
+
+#hours #address {
+	line-height: 2;
+}
+
+#hours>span, #address>span {
+	font-size: 3em;
+
+}
+#address p {
+	color: #557c3e;
+	font-size: .8em;
+	line-height: 1.8;
+}
+#media ul li{
+	list-style: none;
+	display: inline-block;
+	font-size: 25px;
+	padding: 0 10px;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 50%;
+	transition: .5s; 
+}
+
+#icon {
+	padding-left: 0px; 
+}
+
+.image {
+	position: relative;
+	border: 2px solid #3F0C1F;
+	overflow: hidden;
+	width: 200px;
+	height: 200px;
+	margin: 0 auto 15px; 
+}
+
+.image span {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
 	font-size: 1.2em;
+	text-transform: uppercase;
+	background-color: #000;
+	color: #fff;
+	opacity: .8;
+
 }
 
+.image:hover{
+	text-shadow: 0 1px 5px 1px #cccccc;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 1200px) {
+	.container .jumbotron{
+		background: url("https://img.wallpapersafari.com/desktop/1280/1024/79/35/QW6jLq.jpg") no-repeat;
+		height: 675px;
+	}
+	
+}
+
+
+
+
+
+
+
+
+
+@media (min-width: 992px) and (max-width: 1199px) {
+	#logo-img {
+		background: url("http://i.xp.io/Bhq8VAP.jpg");
+	width: 100px;
+	height: 100px;
+	margin: 5px 5px 5px 0;
+	}
+	.container .jumbotron{
+		background: url("https://img.wallpapersafari.com/tablet/768/1024/79/35/QW6jLq.jpg") no-repeat;
+		height: 558px;
+		background-position: center;
+	}
+
+
+}
+
+
+
+
+
+
+@media (min-width: 768px) and (max-width: 991px){
+	.container .jumbotron{
+		background: url("https://img.wallpapersafari.com/tablet/768/1024/79/35/QW6jLq.jpg") no-repeat;
+		height: 432px;
+		
+		
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 767px) {
+	.navbar-brand {
+		padding-top: 10px;
+		height: 80px;
+	}
+    
+    .navbar-brand h1 {
+    	padding-top: 10px;
+    	font-size: 5vw;
+    }
+    .navbar-brand p {
+    	font-size: .6em;
+    	margin-top: 12px;
+    }
+
+    #collapsable-nav a {
+    	font-size: 1.2em;
+    }
+
+    #collapsable-nav a span {
+    	font-size: 1em;
+    	margin-right: 5px;
+    }
+    #call-btn > a {
+    	font-size: 1.5em;
+    	display: block;
+    	margin: 0px 20px;
+    	padding: 10px;
+    	border: 2px solid #fff;
+    	background-color: #f6b319;
+    	color: #951c49;
+
+    }
+    #xs-help{
+    	margin-top: 5px;
+    	margin-bottom: 5px;
+    	font-size: .7em;
+    	letter-spacing: .1em;
+    }
+
+    #Gallery-tile, #Films-tile {
+    	width: 360px;
+    	margin: 0 auto 15px;
+    } 
+
+    .container .jumbotron{
+    	background-position: center;
+    }
+
+}
+
+@media(max-width: 479px) {
+	#Gallery-tile, #Films-tile {
+    	width: 300px;
+    	margin: 0 auto 15px;
+    	height: 300px;
+    } 
+
+    .navbar-brand h1{
+    	padding-top: 5px;
+    	font-size: 6vw;
+    }
+    .col-xxs-12{
+    	position: relative;
+    	min-height: 1px;
+    	padding-right: 15px;
+    	padding-left: 15px; 
+    	float: left;
+    	width: 100%;
+    }
+}
